more locale work

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
     tai: or
     puh: tel
     myos: See also
+    slogan: asian elegance
     kartta: 
         short: Map
         yks:  <b>Villa Taika</b>  is located in Antskog 4km north of Fiskars  to the direction of Karjalohja (north). 
