--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -3,6 +3,7 @@
 fi:
     tai: tai
     puh: puh
+    slogan: taianomaista tyylikkyyttä
     kartta: 
         short: Kartta
         yks: Villa Taika  sijaitsee Antskogissa 4km Fiskarsista  Karjalohjalle päin.
