still translation fixes

--- a/config/locales/general.yml
+++ b/config/locales/general.yml
@@ -3,8 +3,13 @@ en:
     puh: tel
     myos: See also
     slogan: asian elegance
+    suites: Suites (w.shower)
+    deluxe: Deluxe (w.toilet)
+    standard: Standard (shared)
+    photos:
+      short: Photos
     index:
-      short: Homepage
+      short: Home
       bold: Asian elegance in the beauty of natural surroundings.
       text:  is a charming Bed&Breakfast  and 
                 course-center in Antskog, near Fiskars, just one hours drive from Helsinki. 
@@ -13,6 +18,11 @@ fi:
     puh: puh
     myos: Katso myös
     slogan: taianomaista tyylikkyyttä
+    suites: Suites (w.shower)
+    deluxe: Deluxe (w.toilet)
+    standard: Standard (shared)
+    photos:
+      short: Kuvat
     index:
       short: Kotisivu
       bold: Taianomaista tyylikkyyttä Aasiasta ja luonnonkauniin ympäristön rauhaa.
