--- a/config/locales/rooms.yml
+++ b/config/locales/rooms.yml
@@ -1,6 +1,6 @@
 en:
   bed:
-    short: Rooms
+    short: Bed & Breakfast
     main:
         We have 5 rooms and 2 Suites. The Orange and Green rooms have their own toilet with use of a shared shower. 
         Rose and Sky room share a toilet and use the shared shower. <br>
@@ -10,7 +10,7 @@ en:
         We can accommodate groups of 25-30.
 fi:
   bed:
-    short: Huoneet
+    short: Bed & Breakfast
     main:
         Meillä on 5 huonetta ja 2 sviittiä. Vihreä ja Oranssi huoneissa on oma WC ja yhteinen suihku.
         Ruusu ja Taivas huoneissa on yhteinen WC ja suihku.
