--- a/config/locales/deluxe.yml
+++ b/config/locales/deluxe.yml
@@ -16,13 +16,13 @@ en:
 fi:
   green:
     short:  Vihreä huone 
-    full: <b>Vihreä huone </b>on tunfourmallinen 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode.
+    full: <b>Vihreä huone </b>on tunnelmallinen 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode.
               Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. 
               Yläkerran huoneesta on kaunis näkymä puutarhaan. <br>
     price: Hinta on 75€ /2hh
   orange:
     short: Oranssi huone 
-    full: <b>Oranssi huone </b>on viihtyisä 20m2 huone. Siellä on parisänky ja sinne mahtuu twoikin lisävuodetta. <br>
+    full: <b>Oranssi huone </b>on viihtyisä 20m2 huone. Siellä on parisänky ja sinne mahtuu kaksikin lisävuodetta. <br>
             Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. Yläkerran huoneesta on kaunis näkymä puutarhaan.
     price: Hinta on 75€ /2hh
     
