--- a/config/locales/suites.yml
+++ b/config/locales/suites.yml
@@ -29,7 +29,7 @@ fi:
     price: Hinta on 95€ /2hh. (Hääpaketti on 135€ /2hh)
   sun:
     short: Aurinko sviitti 
-    full: <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m2 sviitti. Siellä on parisänky ja sinne mahtuu mukavasti twoikin lisävuodetta. 
+    full: <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m2 sviitti. Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. 
             Siinä on oma wc ja suihku.
     price: Hinta on 90€ /2hh
   ametist:
