fixes home layoout

--- a/config/locales/news.yml
+++ b/config/locales/news.yml
@@ -9,6 +9,7 @@ en:
     rest: Real hirsi country feeing combined with 
           beautiful style and a four poster bed! 
 fi:
+  last: 04_2011
   news: 
     short: Uutiset
   04_2011: 
