--- a/config/locales/groups.yml
+++ b/config/locales/groups.yml
@@ -1,23 +1,43 @@
 en:
   groups: 
     short: Groups
-    one: The group space is 75 m2. We can comfortably accommodate 25 people in our 7 rooms.
-          It is also possible to use the group space for accommodating more people. <br>
-          We offer vegetarian or vegan food, prepared with love.
-    two: Our garden is large and open, and well suited for group work.
-          During courses it is possible to use our large, wood heated sauna, and our small pool.
-    three:  Our house is situated in extremely beautiful natural surroundings in southern Finland. 
-          In walking distance are 5 different lakes and a large nature reserve. 
-    four: Prices and details subject to negotiation. Contact us under +358 40 704 6689
+    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br><br>
+          <ul> 
+            <li> large group room</li>
+            <li> large garden</li>
+            <li> high quality sound + video</li>
+            <li> blankets and cushions</li>
+            <li> wood heated sauna + pool</li>
+            <li> accomodate 20-30 people</li>
+            <li> extra teacher room</li>
+            <li> nearby activities</li>
+            <li> vegetarian foo</li>
+          </ul>
+    bottom: 
+      Our beautifully decorated group space has a good size to allow many activities with enough space, be it
+      jooga, dancing, body work or other group work. <br>
+      Our garden is large and open, and well suited for both quiet and active work. <br>
+      The greoup space is also well equipped with a high quality steoro system and a video project is 
+      available if needed. <br>
+      For quit group work we have blankets and sitting cousions for participants. <br>
+      During courses it is possible to use our large, wood heated sauna, and our small pool. <br>
+      Off course we can accomodate 20 people comfortably in our 8 rooms, but up to 30 is possible using
+      extra beds, and we also have a seperate room for the teacher<br>
+      There are many local activities for groups that are not courses, see our <a href="/en/activities.html">activities
+      page</a>. Also our neighbour <a href="http://www.kdadventure.com/fi/activities/">KD Adventure</a> organises Experience Evenings, Nature Courses or 
+      Paintball for groups.<br>
+      We offer vegetarian or vegan food, prepared with love. <br>
+      Prices and details subject to negotiation. Full board prices with use of group room and sauna range 
+      from 50-65€, with prices depending on group size and food requirements. <br>
 fi:
   groups: 
     short: Ryhmille
-    one: Ryhmätila on 75 m2. Voimme majoittaa 25 ihmistä 7:ään huoneeseemme. 
+    right: Ryhmätila on 75 m2. Voimme majoittaa 25 ihmistä 7:ään huoneeseemme. 
         Ryhmätilaa on mahdollista käyttää myös majoitukseen. 
         Tarjoamme täysipainoista kasvisruokaa kursseillamme.
-    two: Pihamme on iso ja avoin. Sitä voi käyttää ryhmäharjoituksiin. 
+        Pihamme on iso ja avoin. Sitä voi käyttää ryhmäharjoituksiin. 
         Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.
-    three: Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
+    bottom: Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
         Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
-    four: Ota yhteyttä!
+        Ota yhteyttä!
   
