--- a/config/locales/suites.yml
+++ b/config/locales/suites.yml
@@ -2,23 +2,31 @@
 en:
   lootus:
     short: Lootus Suite
-    full:  The <b>Lootus Suite</b>  is a spacious and enjoyable flat of about 40m2. It has it's own bathroom with shower and toilet. From the Suite's own terasse one can see the nearby lake.
-            There is a lovely double bed, and plenty of space for up to three extra beds on request. <br> <br>
-            The suite is also very well suited for wedding couples. The wedding package includes extra decoration, including flowers and candles. 
-            Breakfeast can be served privately on the terasse.
-    price: The price for two is 95€. (Weddingpackage is 135€ for two)
+    full:  The <b>Lootus Suite</b>  is a spacious and enjoyable flat of about 40 m², with traditional indian elements. <br>  
+            It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br>
+            One can see the nearby lake, and the terasse is a perfect place to enjoy the morning 
+            in the sun. <br>
+            There is a lovely double bed, and plenty of space for up to three extra beds on request. <br> 
+            The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes 
+            extra decoration, including flowers and candles, and breakfeast can be served privately 
+            to the room or terasse.<br>
+            The price for two is 95€. (Weddingpackage is 135€ for two)
   sun:
-    short: Aurinko sviitti 
-    full: <b>Sun suite</b> is an elegant and sunny room. In the room is a double bed and there is 
-           space to fit two extra beds on request.
-           The room has an attached toilet and shower.
-    price: The price for two is 90€.
+    short: Sun suite 
+    full: The <b>Sun suite</b> is an elegant, sunny and spacious room. <br>
+          Traditional english timberframing gives the room a rustic touch which counterpoints the elegant 
+          interiour with beautiful teak furniture.<br>
+          Facing south with large windows there is a very sunny and light feeling in the room. Also very spacious 
+          as the ceilings are over 3m high.<br> 
+          Shower and toilet are ensuite. 
+          There is a double bed and a space to fit two extra beds.<br>
+          The price for two is 90€.
   ametist:
-    short: Ametisti huone
-    full: <b>The Amethyst</b> room is a sunny 15m2 room with a double bed. Thought not ensuite, 
-          there is a private bathroom just next to it.
-    price: The price for two is 80€
-  
+    short: Amethyst room
+    full: The <b>Amethyst</b> room is a light and sunny 15m² room with a mixed asian interiour. <br>
+          The room has is south facing  with large windows and high ceiling that give it a very spacious feel.<br>
+          There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br>
+          The price for two is 80€
 fi:
   lootus:
     short: Lootus sviitti 
