--- a/config/locales/rooms.yml
+++ b/config/locales/rooms.yml
@@ -3,24 +3,34 @@ en:
     rooms: Rooms
     short: Bed & Breakfast
     one:
-        Welcome to the charming Villa Taika! We have a beautiful garden with the pond and waterfall.
-        You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights.
-        The Billnäs    15km, Mustio castle 15 km , beautiful towns of Tammisaari 35 km and Hanko 65km
-    
+        Welcome to the charming and peaceful Villa Taika! <br>
+        We have created unique B&B, with 8 individually decorated rooms.
+        Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the 
+        pieces of furniture, that we selected to our rooms. <br> 
+        We hope you will be revitalised in the beauty of our surroundings! <br>
+
+        In the backyard we have a beautiful garden with the pond and waterfall.
+        You can relax in the garden by listening to the soothing sound of the water or make trips to the 
+        nearby tourist sights.
+        The Billnäs 15km, Mustio castle 15 km , beautiful towns of Tammisaari 35 km and Hanko 65km
     two:
-        The room price is for two people, between 75 and 95 €. 
-        The price includes breakfast(served between 8:30-10:00), bed-linen and towels, and extra beds cost 25€.  
-        We can accommodate groups of 25-30. You can sign into your room between 14-19 . Please let us know what time
-        you'll be arriving! And you'll ......by 12.??? 
-    suites: 3 suites with own shower 85/90/95
-    deluxe: 2 rooms with toilet inside (upstairs) 75
-    standard: 2 rooms which share one shower, 75
+        The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br>
+        The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br>  
+        You can sign into your room between 14-19 . Please let us know what time
+        you'll be arriving! <br>
+        Checkout by 12 o'clock 
+    suites: 3 suites with own shower 85-95 €
+    deluxe: 2 rooms with toilet ensuite 75€
+    standard: 2 rooms which share one shower 75€
 fi:
   bed:
     rooms: Huoneet
     short: Bed & Breakfast
-    one: Tervetuloa viehättävään Villa Taikaan! Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit
-      nauttia olostasi vesiputouksen solinaa kuunnellen.Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, 
+    one: Tervetuloa viehättävään Villa Taikaan!Olemme luoneet B&B;n, jossa jokainen huone on uniikisti sisustettu. 
+        Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. 
+          Valitsimme huoneisiimme uniikit huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. 
+          Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa!    Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit
+          nauttia olostasi vesiputouksen solinaa kuunnellen.Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, 
       Tammisaari 35km, Hanko 65km. Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.
     two:
         Huoneen hinta on kahdelle ja lisävuode on 25€. 
