--- a/config/locales/groups.yml
+++ b/config/locales/groups.yml
@@ -11,7 +11,7 @@ en:
             <li> accomodate 20-30 people</li>
             <li> extra teacher room</li>
             <li> nearby activities</li>
-            <li> vegetarian foo</li>
+            <li> vegetarian food</li>
           </ul>
     bottom: 
       Our beautifully decorated group space has a good size to allow many activities with enough space, be it
@@ -24,11 +24,10 @@ en:
       Off course we can accomodate 20 people comfortably in our 8 rooms, but up to 30 is possible using
       extra beds, and we also have a seperate room for the teacher<br>
       There are many local activities for groups that are not courses, see our <a href="/en/activities.html">activities
-      page</a>. Also our neighbour <a href="http://www.kdadventure.com/fi/activities/">KD Adventure</a> organises Experience Evenings, Nature Courses or 
-      Paintball for groups.<br>
+      page</a>. <br>
       We offer vegetarian or vegan food, prepared with love. <br>
       Prices and details subject to negotiation. Full board prices with use of group room and sauna range 
-      from 50-65€, with prices depending on group size and food requirements. <br>
+      from 50-65€, with prices depending on group size and food requirements. <br> <br>
 fi:
   groups: 
     short: Ryhmille
